--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: '3'
-
 services:
 
   scrapyd:
-    image: zentekmx/scrapyd:1.2.1
+    image: thecloudminders/scrapyd:latest
     ports:
-    - "6800:6800"
+      - "6800:6800"
     volumes:
-    - ${SCRAPYD_VOLUME:-scrapyd-volume}:/scrapyd:Z
+      - scrapyd:/scrapyd
 
   scrapydweb:
-    image: zentekmx/scrapydweb:1.4.0
+    image: thecloudminders/scrapydweb:latest
+    entrypoint: dumb-init wait-for-it.sh -t 60 scrapyd:6800 -- scrapydweb
     depends_on:
-    - scrapyd
+      - scrapyd
     links:
-    - scrapyd
+      - scrapyd
     ports:
-    - "5000:5000"
+      - "5000:5000"
     environment:
-    - SCRAPYD_ADMIN
-    - SCRAPYD_PASSWD
-    - SCRAPYD_SERVERS
-    - DATABASE_URL
+      - SCRAPYD_ADMIN
+      - SCRAPYD_PASSWD
+      - SCRAPYD_SERVERS
+      - DATABASE_URL
 
 volumes:
-  scrapyd-volume:
+  scrapyd:
 
